# uwb_device

./: CMakeLists.txt  README.md  package.xml
include/uwb/: Position.h
msg/: tag_distance.msg  uwb_Position.msg
scripts/: cal_std_mean.py  preprocess.py  uwb_csv_record.py  uwb_excel_record.py  uwb_start.py
src/: Position.cpp  eigen_test.cpp  positioning_ori.cpp  uwb_positioning.cpp
uwb_calibrationdata/data/20220218/: T0_150cm.csv  T0_305cm.csv  T0_450cm.csv  T1_150cm.csv  T1_305cm.csv  T1_450cm.csv
uwb_calibrationdata/data/20220223/: T0_150cm.csv  T0_305cm.csv  T0_450cm.csv  T1_150cm.csv  T1_305cm.csv  T1_450cm.csv
uwb_calibrationdata/data/20220224/preprocessed/: T0_200cm.csv  T0_2310cm.csv  T0_300cm.csv  T0_3243cm.csv  T0_3950cm.csv  T0_400cm.csv  T0_500cm.csv  T0_600cm.csv  T0_700cm.csv  T0_800cm.csv  T1_200cm.csv  T1_2310cm.csv  T1_300cm.csv  T1_3243cm.csv  T1_3950cm.csv  T1_400cm.csv  T1_500cm.csv  T1_600cm.csv  T1_700cm.csv  T1_800cm.csv
uwb_calibrationdata/data/20220224/raw/: T0_200cm.csv  T0_2310cm.csv  T0_300cm.csv  T0_3243cm.csv  T0_3950cm.csv  T0_400cm.csv  T0_500cm.csv  T0_600cm.csv  T0_700cm.csv  T0_800cm.csv  T1_200cm.csv  T1_2310cm.csv  T1_300cm.csv  T1_3950cm.csv  T1_400cm.csv  T1_500cm.csv  T1_600cm.csv  T1_700cm.csv  T1_800cm.csv
uwb_calibrationdata/data/20220225/: T1_3243cm.csv
uwb_calibrationdata/data/20220304/: T0_1022cm.csv  T0_1380cm.csv  T0_1550cm.csv  T0_640cm.csv  T0_760cm.csv  T0_870cm.csv  T1_1022cm.csv  T1_1380cm.csv  T1_1550cm.csv  T1_640cm.csv  T1_760cm.csv  T1_870cm.csv
uwb_calibrationdata/data/20220304_2/raw/: T0_540cm.csv  (+13 more)
(+74 files in other folders)
